--- a/public/css/templatemo-xtra-blog.css
+++ b/public/css/templatemo-xtra-blog.css
@@ -18,26 +18,26 @@ body {
 }
 
 p, span { color: #999; }
-hr { 
-    border-top-color: #CCC; 
+hr {
+    border-top-color: #CCC;
     margin-top: 10px;
     margin-bottom: 10px;
 }
-.form-control::-webkit-input-placeholder { color: #999; }  
-.form-control:-ms-input-placeholder { color: #999; }  
+.form-control::-webkit-input-placeholder { color: #999; }
+.form-control:-ms-input-placeholder { color: #999; }
 .form-control::placeholder { color: #999; }
 
 .tm-header {
-    background-color: #0CC;
+    background-color: #19b852;
     color: white;
-    
+
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     z-index: 100;
     width: 400px;
-    overflow-y: visible;     
+    overflow-y: visible;
 }
 
 .tm-header-wrapper {
@@ -46,7 +46,7 @@ hr {
     -ms-overflow-style: none;
     padding: 30px;
     width: 100%;
-    height: 100%; 
+    height: 100%;
 }
 
 .tm-header-wrapper::-webkit-scrollbar {
@@ -57,19 +57,27 @@ hr {
 .tm-site-header {
     margin-top: 50px;
     margin-bottom: 115px;
+    font-family: 'Source Sans Pro', sans-serif;
+
+}
+
+.login_user{
+    font-size: 20px;
+    color: white;
+    font-weight: bold;
 }
 
 .tm-site-logo {
     width: 75px;
     height: 75px;
-    border-radius: 50%;
-    background-color: white;    
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.tm-site-logo i { color: #0CC; }
+} && img{
+      color: white;
+      width: 15rem;
+      height: 15rem;
+  }
 
 .tm-main {
     margin-left: 400px;
@@ -95,7 +103,8 @@ hr {
     background-color: transparent;
     height: 75px;
     width: 100%;
-    max-width: 300px;    
+    text-decoration: none;
+    max-width: 300px;
     display: flex;
     align-items: center;
     font-size: 1.4rem;
@@ -105,7 +114,7 @@ hr {
 .tm-nav-item:hover .tm-nav-link,
 .tm-nav-item.active .tm-nav-link
  {
-    color: #0CC;
+    color: #1e1f22;
     background-color: white;
     text-decoration: none;
 }
@@ -116,7 +125,7 @@ hr {
 .tm-nav-item.active:after {
     content: '';
     width: 100%;
-    max-width: 300px;    
+    max-width: 300px;
     height: 75px;
     display: block;
     border: 1px solid white;
@@ -128,8 +137,8 @@ hr {
 
 .tm-nav-link i { margin-right: 37px; }
 
-ul { 
-    margin: 0; 
+ul {
+    margin: 0;
     padding: 0;
 }
 
@@ -137,18 +146,18 @@ ul {
 
 .tm-social-link {
     display: inline-block;
-    background-color: white;    
+    background-color: white;
     font-size: 1.4rem;
     width: 50px;
     height: 50px;
     text-align: center;
-    padding-top: 8px; 
-    margin-right: 15px;   
+    padding-top: 8px;
+    margin-right: 15px;
     margin-bottom: 15px;
 }
 
-.tm-social-icon { 
-    color: #0CC;    
+.tm-social-icon {
+    color: #0CC;
     transition: all 0.3s ease;
 }
 
@@ -170,7 +179,7 @@ ul {
     width: 480px;
     margin-right: 30px;
     border-radius: 0;
-    border-color: #0CC;
+    border-color: #19b852;
     font-size: 1.2rem;
 }
 
@@ -178,7 +187,7 @@ ul {
     width: 60px;
     height: 60px;
     border: none;
-    background-color: #0CC;
+    background-color: #19b852;
     transition: all 0.3s ease;
 }
 
@@ -255,9 +264,9 @@ ul {
     transition: all 0.3s ease;
 }
 
-.tm-btn-primary {    
+.tm-btn-primary {
     background-color: #0CC;
-    color: white;  
+    color: white;
     padding: 8px 43px;
     border: none;
 }
@@ -284,7 +293,7 @@ ul {
     height: 50px;
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
 }
 
 .tm-paging-item .tm-paging-link:hover,
@@ -377,8 +386,8 @@ a.tm-color-gray, .tm-color-gray { color: #999; }
 a.tm-color-gray:hover { color: #099; }
 .tm-bg-gray { background-color: #F3F4F5; }
 button:focus { outline: none; }
-a:hover { 
-    text-decoration: none; 
+a:hover {
+    text-decoration: none;
     color: #048c8c;
 }
 
@@ -395,8 +404,8 @@ a:hover figcaption { color: #056767; }
     width:100%;
 }
 
-.tm-social-links li { 
-    list-style: none; 
+.tm-social-links li {
+    list-style: none;
     display: inline-block;
 }
 
@@ -405,8 +414,8 @@ a:hover figcaption { color: #056767; }
     color: white;
     background-color: #0CC;
     width: 45px;
-    height: 45px;    
-    margin-right: 15px;    
+    height: 45px;
+    margin-right: 15px;
 }
 
 .tm-social-links li a i { transition: all 0.3s ease; }
@@ -463,7 +472,7 @@ a:hover figcaption { color: #056767; }
 @media (max-width: 991px) {
     .tm-header {
         width: 320px;
-        left: -320px;        
+        left: -320px;
         transition: all 0.3s ease;
     }
 
@@ -528,8 +537,8 @@ a:hover figcaption { color: #056767; }
         max-width: 100%;
     }
 
-    .tm-paging-wrapper { 
-        margin-top: 50px; 
+    .tm-paging-wrapper {
+        margin-top: 50px;
         justify-content: flex-start;
     }
 
@@ -582,7 +591,7 @@ a:hover figcaption { color: #056767; }
 }
 
 @media (max-width: 575px) {
-    .tm-contact-form input, 
+    .tm-contact-form input,
     .tm-contact-form textarea {
         max-width: 100%;
     }
