--- a/public/css/templatemo-xtra-blog.css
+++ b/public/css/templatemo-xtra-blog.css
@@ -62,10 +62,26 @@ hr {
 }
 
 .login_user{
-    font-size: 20px;
+    margin-top: 20px;
+    font-size: 18px;
     color: white;
     font-weight: bold;
-}
+} && .login_user a {
+      background-color: white;
+      text-decoration: none;
+      color: #333; /* Cor escura para o texto */
+      padding: 10px 20px;
+      font-size: 16px;
+      font-weight: bold;
+      border-radius: 5px;
+      cursor: pointer;
+      align-items: center;
+      gap: 10px; /* Espaço entre o ícone e o texto */
+      transition: background-color 0.3s, color 0.3s;
+  } && .login_user a:hover {
+          background-color: #333; /* Fundo escuro ao passar o mouse */
+          color: white; /* Texto branco ao passar o mouse */
+      }
 
 .tm-site-logo {
     width: 75px;
@@ -84,31 +100,112 @@ hr {
     padding: 80px 100px 25px;
 }
 
-.tm-post { max-width: 470px; }
+.tm-post {
+    max-width: 470px;
+}
+
+article{
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+article img {
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    object-fit: cover; /* Garante que a imagem preencha o quadrado */
+    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+article:hover {
+    transform: rotate(-5deg) scale(1);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.card-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: #fff;
+    opacity: 0;
+    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+article:hover .card-content{
+    transform: translate(-50%, -50%) rotate(0deg);
+    opacity: 1;
+}
+
+.card-content h2 {
+    margin: 0;
+    font-size: 24px;
+    color: #333;
+    font-weight: 700;
+}
+
+.card-content p {
+    margin: 10px 0 0;
+    font-size: 14px;
+    color: #777;
+    line-height: 1.4;
+}
+
+article:hover img{
+    scale: 0;
+    transform: rotate(-45deg);
+}
+
+.status {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: #19b852;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: bold;
+    z-index: 10; /* Mantém o status acima da imagem */
+    opacity: 1; /* Inicialmente visível */
+    transition: opacity 0.6s cubic-bezier(0.23, 1, 0.320, 1); /* Suaviza a animação de opacidade */
+} && article:hover .status {
+    opacity: 0;
+  }
 
 .tm-row {
     max-width: 980px;
     justify-content: space-between;
 }
 
-.tm-nav { margin-bottom: 100px; }
+.tm-nav {
+    margin-top: -50px;
+}
 
 .tm-nav-item {
     list-style: none;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 
 .tm-nav-link {
     color: white;
     background-color: transparent;
-    height: 75px;
+    height: 35px;
     width: 100%;
     text-decoration: none;
     max-width: 300px;
     display: flex;
     align-items: center;
-    font-size: 1.4rem;
-    padding: 30px;
+    font-size: 1.3rem;
+    padding: 25px;
 }
 
 .tm-nav-item:hover .tm-nav-link,
@@ -117,6 +214,7 @@ hr {
     color: #1e1f22;
     background-color: white;
     text-decoration: none;
+    border-radius: 12px;
 }
 
 .tm-nav ul { position: relative; }
@@ -126,9 +224,8 @@ hr {
     content: '';
     width: 100%;
     max-width: 300px;
-    height: 75px;
+    height: 35px;
     display: block;
-    border: 1px solid white;
     margin-left: 10px;
     margin-top: -65px;
     position: absolute;
